--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@astrojs/check": "^0.9.4",
     "@astrojs/tailwind": "^5.1.2",
+    "@notionhq/client": "^2.3.0",
     "astro": "^4.16.16",
     "nodemailer": "^6.9.16",
     "tailwindcss": "^3.4.15",
