--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@notionhq/client": "^2.3.0",
     "astro": "^4.16.16",
     "nodemailer": "^6.9.16",
+    "resend": "^4.3.0",
     "tailwindcss": "^3.4.15",
     "typescript": "^5.7.2"
   }
