--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "nodemailer": "^6.9.16",
     "resend": "^4.3.0",
     "tailwindcss": "^3.4.15",
-    "typescript": "^5.7.2"
+    "typescript": "^5.7.2",
+    "typewriter-effect": "^2.21.0"
   }
 }
