--- a/package.json
+++ b/package.json
@@ -13,8 +13,12 @@
     "@astrojs/check": "^0.9.4",
     "@astrojs/tailwind": "^6.0.2",
     "@notionhq/client": "^2.3.0",
+    "@tailwindcss/postcss": "^4.1.5",
+    "@tailwindcss/vite": "^4.1.5",
     "astro": "^5.7.10",
+    "autoprefixer": "^10.4.21",
     "nodemailer": "^7.0.2",
+    "postcss": "^8.5.3",
     "resend": "^4.5.0",
     "tailwindcss": "^4.1.5",
     "typescript": "^5.8.3",
