--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
   },
   "dependencies": {
     "@astrojs/check": "^0.9.4",
-    "@astrojs/tailwind": "^6.0.2",
+    "@astrojs/tailwind": "latest",
     "@notionhq/client": "^2.3.0",
     "@tailwindcss/vite": "^4.1.5",
     "astro": "^5.7.10",
