--- a/package.json
+++ b/package.json
@@ -12,13 +12,17 @@
   "dependencies": {
     "@astrojs/check": "^0.9.4",
     "@astrojs/tailwind": "latest",
+    "@fortawesome/fontawesome-free": "^6.7.2",
     "@notionhq/client": "^2.3.0",
+    "@types/three": "^0.176.0",
     "astro": "^5.7.10",
     "autoprefixer": "^10.4.21",
     "nodemailer": "^7.0.2",
     "postcss": "^8.5.3",
+    "react": "^19.1.0",
     "resend": "^4.5.0",
     "tailwindcss": "^3.0.24",
+    "three": "^0.176.0",
     "typescript": "^5.8.3",
     "typewriter-effect": "^2.22.0"
   }
